// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`KbqFormField should change KbqPasswordToggle icon by click 1`] = `
DebugElement {
  "nativeNode": <kbq-password-toggle
    aria-hidden="false"
    class="kbq-password-toggle"
    style="visibility: visible;"
  >
    <i
      aria-label="Скрыть пароль"
      aria-pressed="true"
      class="kbq kbq-icon-button kbq-icon kbq-contrast-fade kbq-eye-slash_16"
      role="button"
      tabindex="0"
    />
    
  </kbq-password-toggle>,
}
`;

exports[`KbqFormField should display KbqCleaner 1`] = `
DebugElement {
  "nativeNode": <kbq-cleaner
    aria-label="Очистить"
    class="kbq-cleaner kbq kbq-icon-button kbq-icon kbq-contrast-fade kbq-circle-xmark_16"
    role="button"
    tabindex="0"
  />,
}
`;

exports[`KbqFormField should display KbqLabel 1`] = `
DebugElement {
  "nativeNode": <kbq-label
    class="kbq-label"
  >
    Label
  </kbq-label>,
}
`;

exports[`KbqFormField should display KbqPasswordToggle by input 1`] = `
DebugElement {
  "nativeNode": <kbq-password-toggle
    aria-hidden="false"
    class="kbq-password-toggle"
    style="visibility: visible;"
  >
    <i
      aria-label="Показать пароль"
      aria-pressed="false"
      class="kbq kbq-icon-button kbq-icon kbq-contrast-fade kbq-eye_16"
      role="button"
      tabindex="0"
    />
    
  </kbq-password-toggle>,
}
`;

exports[`KbqFormField should display KbqReactivePasswordHint error for invalid password 1`] = `
DebugElement {
  "nativeNode": <kbq-reactive-password-hint
    class="kbq-reactive-password-hint kbq-hint kbq-contrast-fade kbq-hint_fill-text-off"
    id="test-reactive-password-hint-id"
  >
    <i
      class="kbq kbq-icon kbq-contrast-fade kbq-xmark-s_16"
      style="max-height: 16px;"
    />
    <span
      class="kbq-hint__text"
    >
       Min length 
       (6/8) 
      
    </span>
  </kbq-reactive-password-hint>,
}
`;

exports[`KbqFormField should display KbqReactivePasswordHint initially 1`] = `
DebugElement {
  "nativeNode": <kbq-reactive-password-hint
    class="kbq-reactive-password-hint kbq-hint kbq-contrast-fade kbq-hint_fill-text-off"
    id="test-reactive-password-hint-id"
  >
    <i
      class="kbq kbq-icon kbq-contrast-fade kbq-xmark-s_16"
      style="max-height: 16px;"
    />
    <span
      class="kbq-hint__text"
    >
       Min length 
       (0/8) 
      
    </span>
  </kbq-reactive-password-hint>,
}
`;

exports[`KbqFormField should display KbqReactivePasswordHint success for valid password 1`] = `
DebugElement {
  "nativeNode": <kbq-reactive-password-hint
    class="kbq-reactive-password-hint kbq-hint kbq-hint_fill-text-off kbq-success"
    id="test-reactive-password-hint-id"
  >
    <i
      class="kbq kbq-icon kbq-success kbq-check-s_16"
      style="max-height: 16px;"
    />
    <span
      class="kbq-hint__text"
    >
       Min length 
      
    </span>
  </kbq-reactive-password-hint>,
}
`;

exports[`KbqFormField should hide KbqPasswordToggle initially 1`] = `
DebugElement {
  "nativeNode": <kbq-password-toggle
    aria-hidden="false"
    class="kbq-password-toggle"
    style="visibility: visible;"
  >
    <i
      aria-label="Показать пароль"
      aria-pressed="false"
      class="kbq kbq-icon-button kbq-icon kbq-contrast-fade kbq-eye_16"
      role="button"
      tabindex="0"
    />
    
  </kbq-password-toggle>,
}
`;
